# pycandle

./: .gitignore  .repomixignore  Cargo.toml  README.md  dummy_manifest.json  gen_dummy_results.rs  generated_gpt2.rs  generated_hints.rs  generated_symbolic.rs  gpt2.rs  recorder.py  ref1.txt  ref2.txt  ref3.txt  repomix-output.xml  report.html  s3gen_keys.txt  test_symbolic.py  verification_results.jsonl
.agent/workflows/: add-activations.md  add-batchnorm.md  add-gpt2.md  add-html-report.md  add-json-mode.md  add-lstm.md  implement-todos.md
.github/workflows/: parity-check.yml
.pycandle/: generated_chatterbox_t3.rs
crates/pycandle/: Cargo.toml  check_output.txt  test_output.txt  verification_results.jsonl
crates/pycandle-audio/: Cargo.toml
crates/pycandle-audio/src/: lib.rs
crates/pycandle-core/: Cargo.toml  verification_results.jsonl
crates/pycandle-core/failures/: debug_node_linear.py
crates/pycandle-core/src/: checker.rs  gpt2.rs  layers.rs  lib.rs  ops.rs  samplers.rs  weights.rs
crates/pycandle-core/src/codegen/: analyzer.rs  config.rs  einsum.rs  gpt2.rs  mod.rs  ops.rs  renderer.rs  types.rs  utils.rs
crates/pycandle-core/src/layers/: activations.rs  conv.rs  mod.rs  norm.rs  rnn.rs  special.rs
crates/pycandle-core/tests/: dummy_test.rs  quantization_drift.rs  verify_codegen.rs
crates/pycandle/src/: bench_gen.rs  dashboard.rs  init.rs  main.rs  new.rs  report.rs  test_gen.rs  todos.rs
crates/pycandle/src/python_assets/: mod.rs  onnx_to_fx.py  recorder_template.py  spy.py
crates/pycandle/tests/: chatterbox_t3_parity.rs
docs/: PORTING_SOP.md  meta_trace_guide.md
dx_simulation/: Cargo.toml  s3gen_meanflow-keys.txt
dx_simulation/src/: generated_s3gen_flow.rs  generated_t3_meta.rs  generated_t3_transformer.rs  generated_voice_encoder.rs  main.rs  punc_norm.rs  s3gen_flow.rs  t3_transformer.rs  voice_encoder.rs
py/: dag_model.py  generated_complex.rs  generated_residual.rs  hello.py  onnx_to_fx.py  pyproject.toml  simple_test.onnx  spy.py  test_hints.py  test_model.py  weight_extractor.py
py/pycandle_spy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
py/pycandle_trace/: small_model_manifest.json  small_model_trace.safetensors
specs/: melspectrogram_parity.md
src/: codegen.rs  lib.rs  main.rs  report.rs
src/codegen/: gpt2.rs  mod.rs
test_trace/: symbolic_test_manifest.json
test_trace_hints/: hints_test_manifest.json
tests/: chatterbox_t3_parity.rs  parity.rs  quantization_drift.rs  simple_onnx_parity.rs
