[package]
name = "pycandle"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.8.2"
candle-nn = "0.8.2"
safetensors = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
colored = "2.0"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
anyhow = "1.0"
