[workspace]
members = ["crates/pycandle", "crates/pycandle-core", "crates/pycandle-audio"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Candle ML framework
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"

# Serialization
safetensors = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI & utilities
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
thiserror = "1.0"
anyhow = "1.0"
walkdir = "2.4"
regex = "1.10"
realfft = "3.3"
num-complex = "0.4"
hf-hub = "0.4.0"
tokenizers = "0.20"
hound = "3.5"

# Internal crates
pycandle-core = { path = "crates/pycandle-core" }
pycandle-audio = { path = "crates/pycandle-audio" }
