[package]
name = "dx_simulation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
pycandle-core = { path = "../crates/pycandle-core" }
pycandle-audio = { path = "../crates/pycandle-audio" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hf-hub = { workspace = true }
safetensors = { workspace = true }
tokenizers = { workspace = true }
hound = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
