[package]
name = "pycandle-core"
description = "Core library for PyCandle: PyChecker, layers, and codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
safetensors.workspace = true
regex.workspace = true
serde.workspace = true
anyhow.workspace = true
serde_json.workspace = true
colored.workspace = true
thiserror.workspace = true
